--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -396,10 +396,10 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   |   |   |   ├─ vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址, 这里面是个ret, 详细说明见下面VCPU_RUN
  |   |   |   |   ├─ vm_exit_controls_set(); // vm-exit控制域设置
  |   |   |   |   ├─ vm_entry_controls_set(); // vm-entry控制域设置
- |   |   |   |   ├─ set_cr4_guest_host_mask(); // 设置虚拟机CR4 
- |   |   |   |  vmx_vcpu_put();
- |   |   |   |      vmx_vcpu_pi_put();
- |   |   |   |      vmx_prepare_switch_to_host(); // 
+ |   |   |   |   └─ set_cr4_guest_host_mask(); // 设置虚拟机CR4 
+ |   |   |   ├─ vmx_vcpu_put();
+ |   |   |   |   ├─ vmx_vcpu_pi_put();
+ |   |   |   |   └─ vmx_prepare_switch_to_host(); // 
  |   |   |   ├─ alloc_apic_access_page(); // 
  |   |   |   └─ init_rmode_identity_map();
  |   |   ├─ kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
