--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -404,16 +404,19 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   |   └─ init_rmode_identity_map();
  |   |   ├─ kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
  |   |   ├─ vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
- |   |   |     kvm_arch_vcpu_load(vcpu, cpu)
- |   |   |         kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的 vmx_vcpu_load(), 见上面
+ |   |   |   ├─ __this_cpu_write(kvm_running_vcpu, vcpu); // 
+ |   |   |   ├─ preempt_notifier_register(&vcpu->preempt_notifier); // 
+ |   |   |   ├─ kvm_arch_vcpu_load(vcpu, cpu)
+ |   |   |   |   ├─ kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的 vmx_vcpu_load(), 见上面
+ |   |   |   |   └─ kvm_make_request(KVM_REQ_STEAL_UPDATE, vcpu); // 
  |   |   ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
- |   |   |     kvm_lapic_reset(vcpu, init_event);
- |   |   |     vcpu(kvm_vcpu)的很多变量的初始化
- |   |   |     kvm_clear_interrupt_queue(vcpu);
- |   |   |     kvm_clear_exception_queue(vcpu);
- |   |   |     kvm_make_request(KVM_REQ_EVENT, vcpu);
- |   |   |     kvmclock_reset(vcpu);
- |   |   |     kvm_x86_ops->vcpu_reset(vcpu, init_event);
+ |   |   |   ├─ kvm_lapic_reset(vcpu, init_event);
+ |   |   |   ├─ vcpu(kvm_vcpu)的很多变量的初始化
+ |   |   |   ├─ kvm_clear_interrupt_queue(vcpu);
+ |   |   |   ├─ kvm_clear_exception_queue(vcpu);
+ |   |   |   ├─ kvm_make_request(KVM_REQ_EVENT, vcpu);
+ |   |   |   ├─ kvmclock_reset(vcpu);
+ |   |   |   └─ kvm_x86_ops->vcpu_reset(vcpu, init_event);
  |   |   | kvm_init_mmu(vcpu, false); // 初始化mmu
  |   |   | vcpu_put(vcpu);
  |   |   |     kvm_arch_vcpu_put(vcpu);
