--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -411,24 +411,24 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   |   |   └─ kvm_make_request(KVM_REQ_STEAL_UPDATE, vcpu); // 
  |   |   ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
  |   |   |   ├─ kvm_lapic_reset(vcpu, init_event);
- |   |   |   ├─ vcpu(kvm_vcpu)的很多变量的初始化
+ |   |   |   ├─ vcpu很多变量的初始化
  |   |   |   ├─ kvm_clear_interrupt_queue(vcpu);
  |   |   |   ├─ kvm_clear_exception_queue(vcpu);
  |   |   |   ├─ kvm_make_request(KVM_REQ_EVENT, vcpu);
  |   |   |   ├─ kvmclock_reset(vcpu);
  |   |   |   └─ kvm_x86_ops->vcpu_reset(vcpu, init_event);
- |   |   | kvm_init_mmu(vcpu, false); // 初始化mmu
- |   |   | vcpu_put(vcpu);
- |   |   |     kvm_arch_vcpu_put(vcpu);
- |   |   |     preempt_notifier_unregister(&vcpu->preempt_notifier);
- |   |   |     __this_cpu_write(kvm_running_vcpu, NULL);
- |   |- km_get_kvm() // 增加kvm的引用计数
- |   |- ceate_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
- |   |- km->vcpus[vcpu->vcpu_idx]=vcpu; //添加到虚拟机的vcpus数组
- |   |- aomic_inc(&kvm->online_vcpus); //增加kvm->online_vcpus数目
- |   |- km_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
+ |   |   ├─ kvm_init_mmu(vcpu, false); // 初始化mmu
+ |   |   └─ vcpu_put(vcpu);
+ |   |       ├─ kvm_arch_vcpu_put(vcpu);
+ |   |       ├─ preempt_notifier_unregister(&vcpu->preempt_notifier);
+ |   |       └─ __this_cpu_write(kvm_running_vcpu, NULL);
+ |   ├─ km_get_kvm() // 增加kvm的引用计数
+ |   ├─ ceate_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
+ |   ├─ km->vcpus[vcpu->vcpu_idx]=vcpu; //添加到虚拟机的vcpus数组
+ |   ├─ aomic_inc(&kvm->online_vcpus); //增加kvm->online_vcpus数目
+ |   ├─ km_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
  |   |   ├─vcpu_load();
- |   |   | kvm_write_tsc();
+ |   |   └─ kvm_write_tsc();
  |   └─ km_create_vcpu_debugfs() // 创建vcpu的debugfs
 ```
 
