--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -149,7 +149,12 @@ PIC有三个重要的寄存器:
 kvm_arch_vcpu_create()  // vcpu创建中创建lapic
  ├─ kvm_create_lapic() // lapic创建入口 
  |   ├─ kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
- |   ├─ vcpu->arch.apic = apic;  // pic创建, 8259
+ |   ├─ vcpu->arch.apic = apic;  // 
+ |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
+ |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer
+ |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // 
+ |   ├─ vcpu->arch.apic = apic;  // 
+ |   ├─ vcpu->arch.apic = apic;  // 
 
 
 
