--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -153,9 +153,10 @@ kvm_arch_vcpu_create()  // vcpu创建中创建lapic
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
  |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer
  |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // 
- |   ├─ vcpu->arch.apic = apic;  // 
- |   ├─ vcpu->arch.apic = apic;  // 
-
+ |   ├─ apic->lapic_timer.timer_advance_ns;  // advanced timer
+ |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
+ ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
+ |   ├─ kvm_lapic_reset(vcpu, init_event);
 
 
 
