--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -5,27 +5,27 @@
 
 - [1. 基本原理](#1-基本原理)
 - [2. Time Tick](#2-time-tick)
-  - [物理环境下的timer](#物理环境下的timer)
-  - [2.1. 虚拟化下的timer](#21-虚拟化下的timer)
-  - [2.2. 相关物理芯片](#22-相关物理芯片)
-    - [2.2.1. PIT主要为Intel 8254 PIT芯片](#221-pit主要为intel-8254-pit芯片)
-    - [2.2.2. PIC主要为8259A PIC芯片](#222-pic主要为8259a-pic芯片)
-    - [APIC](#apic)
+  - [2.1. 物理环境下的timer](#21-物理环境下的timer)
+  - [2.2. 虚拟化下的timer](#22-虚拟化下的timer)
+  - [2.3. 相关物理芯片](#23-相关物理芯片)
+    - [2.3.1. PIT主要为Intel 8254 PIT芯片](#231-pit主要为intel-8254-pit芯片)
+    - [2.3.2. PIC主要为8259A PIC芯片](#232-pic主要为8259a-pic芯片)
+    - [2.3.3. APIC](#233-apic)
 - [3. 相关代码](#3-相关代码)
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
-  - [LAPIC的创建](#lapic的创建)
-    - [整体流程](#整体流程)
-    - [代码入口](#代码入口)
-  - [5.1. PIC和IOAPIC的创建](#51-pic和ioapic的创建)
-    - [5.1.1. QEMU](#511-qemu)
-    - [5.1.2. 整体流程](#512-整体流程)
-    - [5.1.3. 入口代码](#513-入口代码)
-    - [5.1.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#514-kvm_pic_init-虚拟pic8259a的初始化)
-      - [5.1.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#5141-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
-      - [5.1.4.2. 三种设备在虚拟bus上的结构](#5142-三种设备在虚拟bus上的结构)
-    - [5.1.5. kvm_ioapic_init(): ioapic的初始化](#515-kvm_ioapic_init-ioapic的初始化)
-    - [5.1.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#516-kvm_setup_default_irq_routing-默认中断路由表的初始化)
+  - [5.1. LAPIC的创建](#51-lapic的创建)
+    - [5.1.1. 整体流程](#511-整体流程)
+    - [5.1.2. 代码入口](#512-代码入口)
+  - [5.2. PIC和IOAPIC的创建](#52-pic和ioapic的创建)
+    - [5.2.1. QEMU](#521-qemu)
+    - [5.2.2. 整体流程](#522-整体流程)
+    - [5.2.3. 入口代码](#523-入口代码)
+    - [5.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#524-kvm_pic_init-虚拟pic8259a的初始化)
+      - [5.2.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#5241-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
+      - [5.2.4.2. 三种设备在虚拟bus上的结构](#5242-三种设备在虚拟bus上的结构)
+    - [5.2.5. kvm_ioapic_init(): ioapic的初始化](#525-kvm_ioapic_init-ioapic的初始化)
+    - [5.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#526-kvm_setup_default_irq_routing-默认中断路由表的初始化)
 - [6. 初始化虚拟PIT](#6-初始化虚拟pit)
   - [6.1. QEMU](#61-qemu)
 - [7. 参考](#7-参考)
@@ -44,7 +44,7 @@
 
 # 2. Time Tick
 
-## 物理环境下的timer
+## 2.1. 物理环境下的timer
 
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
@@ -64,7 +64,7 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 - 一次性触发`one-shot`
 - `TSC-Deadline`模式(最新的CPU里面支持)。
 
-## 2.1. 虚拟化下的timer
+## 2.2. 虚拟化下的timer
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
@@ -78,9 +78,9 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
-## 2.2. 相关物理芯片
+## 2.3. 相关物理芯片
 
-### 2.2.1. PIT主要为Intel 8254 PIT芯片
+### 2.3.1. PIT主要为Intel 8254 PIT芯片
 
 **PIT**(**Programmable Interval Timer**), **可编程间隔定时器**
 
@@ -94,7 +94,7 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-### 2.2.2. PIC主要为8259A PIC芯片
+### 2.3.2. PIC主要为8259A PIC芯片
 
 **PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
 
@@ -108,7 +108,7 @@ PIC有三个重要的寄存器:
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
 
-### APIC
+### 2.3.3. APIC
 
 见硬件基础
 
@@ -137,13 +137,13 @@ PIC有三个重要的寄存器:
 
 所以在**qemu**中也会创建**i8259A**和**ioapic**
 
-## LAPIC的创建
+## 5.1. LAPIC的创建
 
 由于**APIC Timer设备**实际就是**lapic的一个功能**，所以在创建lapic设备同时，也就辅助设置了。
 
 不存在qemu侧流程
 
-### 整体流程
+### 5.1.1. 整体流程
 
 ```cpp
 kvm_arch_vcpu_create()  // vcpu创建中创建lapic
@@ -152,14 +152,14 @@ kvm_arch_vcpu_create()  // vcpu创建中创建lapic
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
  |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer
- |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // 
+ |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer回调函数
  |   ├─ apic->lapic_timer.timer_advance_ns;  // advanced timer
  |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
  ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
- |   ├─ kvm_lapic_reset(vcpu, init_event);
+ |   ├─ kvm_lapic_reset(vcpu, init_event); // 设置寄存器的值为默认值
 ```
 
-### 代码入口
+### 5.1.2. 代码入口
 
 lapic是每个vcpu一个, 所以在创建vcpu流程中创建了lapic
 
@@ -183,7 +183,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
                 goto nomem_free_apic;
         }
         apic->vcpu = vcpu;
-        // 
+        // 建立hrtimer, 回调函数 apic_timer_fn
         hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC,
                      HRTIMER_MODE_ABS_HARD);
         apic->lapic_timer.timer.function = apic_timer_fn;
@@ -212,9 +212,17 @@ nomem:
 }
 ```
 
-## 5.1. PIC和IOAPIC的创建
+其中`hrtimer_init`是创建了一个时钟定时器，用来实现时钟的模拟
 
-### 5.1.1. QEMU
+因为**APIC Timer设备**实际就是lapic的一个功能，所以在创建lapic设备**同时创建**了。
+
+
+
+
+
+## 5.2. PIC和IOAPIC的创建
+
+### 5.2.1. QEMU
 
 qemu代码中中断控制器的kvm内核初始化流程为：
 
@@ -232,7 +240,7 @@ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在**内核模块**中**创建和初始化PIC/IOAPIC设备**（创建设备对应的数据结构并将设备注册到总线上）。
 
-### 5.1.2. 整体流程
+### 5.2.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -261,7 +269,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 ```
 
-### 5.1.3. 入口代码
+### 5.2.3. 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -302,7 +310,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-### 5.1.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
+### 5.2.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 `arch/x86/kvm/i8259.c`
 
@@ -367,7 +375,7 @@ fail_unlock:
 }
 ```
 
-#### 5.1.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
+#### 5.2.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
 
 8259A PIC属于PIO访问类型.
 
@@ -415,7 +423,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 }
 ```
 
-#### 5.1.4.2. 三种设备在虚拟bus上的结构
+#### 5.2.4.2. 三种设备在虚拟bus上的结构
 
 虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
 
@@ -423,7 +431,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 
 每个`kvm_io_device`的设备都有对应的读写函数
 
-### 5.1.5. kvm_ioapic_init(): ioapic的初始化
+### 5.2.5. kvm_ioapic_init(): ioapic的初始化
 
 ```cpp
 int kvm_ioapic_init(struct kvm *kvm)
@@ -460,7 +468,7 @@ int kvm_ioapic_init(struct kvm *kvm)
 
 ![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
 
-### 5.1.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
+### 5.2.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
 
 **中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
