--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -30,7 +30,7 @@
   - [6.1. QEMU](#61-qemu)
   - [6.2. 整体流程](#62-整体流程)
   - [入口代码](#入口代码)
-  - [kvm_create_pit](#kvm_create_pit)
+  - [kvm_create_pit(): 创建pit(8254)](#kvm_create_pit-创建pit8254)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -757,12 +757,11 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 kvm_vm_ioctl()  // vm ioctl的入口
  ├─  kvm_arch_vm_ioctl()     
  |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
- |   ├─ kvm_pic_init()   // pic创建, 8259
- |   |   ├─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
- |   |   ├─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
- |   |   ├─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
- |   |   ├─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2, &s->dev_master); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
+ |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 注册master的IO端口读写函数
+ |   |   ├─ pid = get_pid(task_tgid(current)); // 注册slave的IO端口读写函数
+ |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 注册eclr的IO端口读写函数
+ |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
@@ -807,7 +806,86 @@ create_pit_unlock:
 
 创建pit并赋值给 `kvm->arch.vpit`
 
-## kvm_create_pit
+## kvm_create_pit(): 创建pit(8254)
+
+```cpp
+struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
+{
+        struct kvm_pit *pit;
+        struct kvm_kpit_state *pit_state;
+        struct pid *pid;
+        pid_t pid_nr;
+        int ret;
+        // 分配空间
+        pit = kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);
+        if (!pit)
+                return NULL;
+
+        pit->irq_source_id = kvm_request_irq_source_id(kvm);
+        if (pit->irq_source_id < 0)
+                goto fail_request;
+
+        mutex_init(&pit->pit_state.lock);
+
+        pid = get_pid(task_tgid(current));
+        pid_nr = pid_vnr(pid);
+        put_pid(pid);
+
+        pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
+        if (IS_ERR(pit->worker))
+                goto fail_kthread;
+
+        kthread_init_work(&pit->expired, pit_do_work);
+
+        pit->kvm = kvm;
+
+        pit_state = &pit->pit_state;
+        hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
+        pit_state->timer.function = pit_timer_fn;
+
+        pit_state->irq_ack_notifier.gsi = 0;
+        pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;
+        pit->mask_notifier.func = pit_mask_notifer;
+
+        kvm_pit_reset(pit);
+
+        kvm_pit_set_reinject(pit, true);
+
+        mutex_lock(&kvm->slots_lock);
+        kvm_iodevice_init(&pit->dev, &pit_dev_ops);
+        ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS,
+                                      KVM_PIT_MEM_LENGTH, &pit->dev);
+        if (ret < 0)
+                goto fail_register_pit;
+
+        if (flags & KVM_PIT_SPEAKER_DUMMY) {
+                kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops);
+                ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
+                                              KVM_SPEAKER_BASE_ADDRESS, 4,
+                                              &pit->speaker_dev);
+                if (ret < 0)
+                        goto fail_register_speaker;
+        }
+        mutex_unlock(&kvm->slots_lock);
+
+        return pit;
+
+fail_register_speaker:
+        kvm_io_bus_unregister_dev(kvm, KVM_PIO_BUS, &pit->dev);
+fail_register_pit:
+        mutex_unlock(&kvm->slots_lock);
+        kvm_pit_set_reinject(pit, false);
+        kthread_destroy_worker(pit->worker);
+fail_kthread:
+        kvm_free_irq_source_id(kvm, pit->irq_source_id);
+fail_request:
+        kfree(pit);
+        return NULL;
+}
+```
+
+
+
 
 # 7. 参考
 
