--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -762,9 +762,18 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ pid = get_pid(task_tgid(current)); // 注册slave的IO端口读写函数
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 注册eclr的IO端口读写函数
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
+ |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   ├─ it_state->timer.function = pit_timer_fn; // 设置回调函数
+ |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 设置回调函数
+ |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 设置回调函数
+ |   |   ├─ kvm_pit_reset(pit); // 设置回调函数
+ |   |   ├─ kvm_pit_set_reinject(pit, true); // 设置回调函数
+ |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 设置回调函数
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 设置回调函数
+ |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // 设置回调函数
+ |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 
+
+ 
  |   ├─ kvm_ioapic_init()   // ioapic的初始化
  |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
  |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
