--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -29,8 +29,8 @@
 - [6. 初始化虚拟PIT](#6-初始化虚拟pit)
   - [6.1. QEMU](#61-qemu)
   - [6.2. 整体流程](#62-整体流程)
-  - [入口代码](#入口代码)
-  - [kvm_create_pit(): 创建pit(8254)](#kvm_create_pit-创建pit8254)
+  - [6.3. 入口代码](#63-入口代码)
+  - [6.4. kvm_create_pit(): 创建pit(8254)](#64-kvm_create_pit-创建pit8254)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -760,8 +760,8 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
  |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 注册master的IO端口读写函数
  |   |   ├─ pid = get_pid(task_tgid(current)); // 注册slave的IO端口读写函数
- |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 注册eclr的IO端口读写函数
- |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
+ |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个pit_do_work是一个函数，用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ it_state->timer.function = pit_timer_fn; // 设置回调函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 设置回调函数
@@ -772,23 +772,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 设置回调函数
  |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // 设置回调函数
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 
-
- 
- |   ├─ kvm_ioapic_init()   // ioapic的初始化
- |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
- |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
- |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
- |   |       ├─ kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT); // 为中断路由表分配空间
- |   |       ├─ for (i = 0; i < nr; ++i)  // 循环默认的24个路由项
- |   |       ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
- |   |       ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
- |   |       |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
- |   |       |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
- |   |       └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
- |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 ```
 
-## 入口代码
+## 6.3. 入口代码
 
 ```cpp
 case KVM_CREATE_PIT:
@@ -815,7 +801,7 @@ create_pit_unlock:
 
 创建pit并赋值给 `kvm->arch.vpit`
 
-## kvm_create_pit(): 创建pit(8254)
+## 6.4. kvm_create_pit(): 创建pit(8254)
 
 ```cpp
 struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
@@ -839,11 +825,11 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pid = get_pid(task_tgid(current));
         pid_nr = pid_vnr(pid);
         put_pid(pid);
-
+        // 建立内核线程
         pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
         if (IS_ERR(pit->worker))
                 goto fail_kthread;
-
+        // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
         kthread_init_work(&pit->expired, pit_do_work);
 
         pit->kvm = kvm;
