--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -764,12 +764,12 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个pit_do_work是一个函数，用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ it_state->timer.function = pit_timer_fn; // 设置回调函数
- |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 设置回调函数
+ |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
  |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 设置回调函数
  |   |   ├─ kvm_pit_reset(pit); // 设置回调函数
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 设置回调函数
- |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 设置回调函数
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 设置回调函数
+ |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上
  |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // 设置回调函数
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 
 ```
@@ -839,6 +839,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pit_state->timer.function = pit_timer_fn;
 
         pit_state->irq_ack_notifier.gsi = 0;
+        // 时钟中断模拟ack
         pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;
         pit->mask_notifier.func = pit_mask_notifer;
 
@@ -847,12 +848,14 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         kvm_pit_set_reinject(pit, true);
 
         mutex_lock(&kvm->slots_lock);
+        // 注册时钟的IO读写函数
         kvm_iodevice_init(&pit->dev, &pit_dev_ops);
+        // 注册时钟到bus总线上
         ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS,
                                       KVM_PIT_MEM_LENGTH, &pit->dev);
         if (ret < 0)
                 goto fail_register_pit;
-
+        /*speaker的模拟*/
         if (flags & KVM_PIT_SPEAKER_DUMMY) {
                 kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops);
                 ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
@@ -880,6 +883,9 @@ fail_request:
 ```
 
 
+这里的worker在kvm_create_pit函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
+
+kvm_apic_nmi_wd_deliver最终会调用到__apic_accept_irq，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
 
 
 # 7. 参考
