--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -763,7 +763,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个pit_do_work是一个函数，用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ it_state->timer.function = pit_timer_fn; // 设置回调函数
+ |   |   ├─ it_state->timer.function = pit_timer_fn; // hrtimer的处理函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
  |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 设置回调函数
  |   |   ├─ kvm_pit_reset(pit); // 设置回调函数
@@ -835,7 +835,9 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pit->kvm = kvm;
 
         pit_state = &pit->pit_state;
+        // 初始化hrtimer
         hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
+        // hrtimer的处理函数
         pit_state->timer.function = pit_timer_fn;
 
         pit_state->irq_ack_notifier.gsi = 0;
@@ -881,6 +883,9 @@ fail_request:
         return NULL;
 }
 ```
+
+初始化hrtimer，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，**每个1ms产生一次中断**
+
 
 
 这里的worker在kvm_create_pit函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
