--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -756,9 +756,9 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
  ├─  kvm_arch_vm_ioctl()     
- |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+ |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 创建pit, 赋值给kvm->arch.vpit
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
- |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 注册master的IO端口读写函数
+ |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 返回kvm中irq_sources_bitmap中没有被占用的第一位，作为irq_source_id
  |   |   ├─ pid = get_pid(task_tgid(current)); // 注册slave的IO端口读写函数
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个pit_do_work是一个函数，用来向客户机注入时钟中断
@@ -815,7 +815,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pit = kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);
         if (!pit)
                 return NULL;
-
+        // 返回kvm中irq_sources_bitmap中没有被占用的第一位，作为irq_source_id
         pit->irq_source_id = kvm_request_irq_source_id(kvm);
         if (pit->irq_source_id < 0)
                 goto fail_request;
@@ -852,7 +852,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         mutex_lock(&kvm->slots_lock);
         // 注册时钟的IO读写函数
         kvm_iodevice_init(&pit->dev, &pit_dev_ops);
-        // 注册时钟到bus总线上
+        // 注册时钟到bus总线上, 注册PIO型设备
         ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS,
                                       KVM_PIT_MEM_LENGTH, &pit->dev);
         if (ret < 0)
@@ -884,7 +884,17 @@ fail_request:
 }
 ```
 
+hrtimer是一种高精准软件时钟计算方法, 高精度定时器
+
 初始化hrtimer，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，**每个1ms产生一次中断**
+
+内核虚拟PIT实际是利用**HOST**的hrtimer实际时钟源来提供虚拟时钟的。 
+
+Hrtimer为高精度定时器，管理机制为: 
+- 传统的低精度的为时间轮方案；
+- 高精度方案为红黑树管理方案；
+
+此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`kvm_timer_fn`;
 
 
 
