--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -759,9 +759,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 创建pit, 赋值给kvm->arch.vpit
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
  |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 返回kvm中irq_sources_bitmap中没有被占用的第一位，作为irq_source_id
- |   |   ├─ pid = get_pid(task_tgid(current)); // 注册slave的IO端口读写函数
+ |   |   ├─ pid = get_pid(task_tgid(current)); // 
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
- |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个pit_do_work是一个函数，用来向客户机注入时钟中断
+ |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ it_state->timer.function = pit_timer_fn; // hrtimer的处理函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
