--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -31,6 +31,7 @@
   - [6.2. 整体流程](#62-整体流程)
   - [6.3. 入口代码](#63-入口代码)
   - [6.4. kvm_create_pit(): 创建pit(8254)](#64-kvm_create_pit-创建pit8254)
+  - [kvm_timer_fn(): 中断流程](#kvm_timer_fn-中断流程)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -762,15 +763,15 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ pid = get_pid(task_tgid(current)); // 
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
- |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ it_state->timer.function = pit_timer_fn; // hrtimer的处理函数
+ |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化
+ |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
- |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 设置回调函数
- |   |   ├─ kvm_pit_reset(pit); // 设置回调函数
- |   |   ├─ kvm_pit_set_reinject(pit, true); // 设置回调函数
+ |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 
+ |   |   ├─ kvm_pit_reset(pit); // 
+ |   |   ├─ kvm_pit_set_reinject(pit, true); // 
  |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上
- |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // 设置回调函数
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上, PIO类型
+ |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker的初始化
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 
 ```
 
@@ -890,7 +891,7 @@ hrtimer是一种高精准软件时钟计算方法, 高精度定时器
 
 内核虚拟PIT实际是利用**HOST**的hrtimer实际时钟源来提供虚拟时钟的。 
 
-Hrtimer为高精度定时器，管理机制为: 
+hrtimer为高精度定时器，管理机制为: 
 - 传统的低精度的为时间轮方案；
 - 高精度方案为红黑树管理方案；
 
@@ -901,6 +902,11 @@ Hrtimer为高精度定时器，管理机制为:
 这里的worker在kvm_create_pit函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
 
 kvm_apic_nmi_wd_deliver最终会调用到__apic_accept_irq，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
+
+## kvm_timer_fn(): 中断流程
+
+虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
+
 
 
 # 7. 参考
