--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -768,6 +768,10 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
  |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 
  |   |   ├─ kvm_pit_reset(pit); // 
+ |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
+ |   |   |   ├─ pit_load_count(pit, i, 0); // 
+ |   |   |   ├─ } // 循环3次
+ |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
  |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上, PIO类型
@@ -885,6 +889,10 @@ fail_request:
 }
 ```
 
+这里的worker在kvm_create_pit函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
+
+kvm_apic_nmi_wd_deliver最终会调用到__apic_accept_irq，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
+
 hrtimer是一种高精准软件时钟计算方法, 高精度定时器
 
 初始化hrtimer，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，**每个1ms产生一次中断**
@@ -897,11 +905,67 @@ hrtimer为高精度定时器，管理机制为:
 
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`kvm_timer_fn`;
 
+```cpp
+static void kvm_pit_reset(struct kvm_pit *pit)
+{
+        int i;
+        struct kvm_kpit_channel_state *c;
+
+        pit->pit_state.flags = 0;
+        for (i = 0; i < 3; i++) {
+                c = &pit->pit_state.channels[i];
+                c->mode = 0xff;
+                c->gate = (i != 2);
+                pit_load_count(pit, i, 0);
+        }
+
+        kvm_pit_reset_reinject(pit);
+}
+```
 
 
-这里的worker在kvm_create_pit函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
 
-kvm_apic_nmi_wd_deliver最终会调用到__apic_accept_irq，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
+```cpp
+static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
+{
+        struct kvm_kpit_state *ps = &pit->pit_state;
+
+        pr_debug("load_count val is %u, channel is %d\n", val, channel);
+
+        /*
+         * The largest possible initial count is 0; this is equivalent
+         * to 216 for binary counting and 104 for BCD counting.
+         */
+        if (val == 0)
+                val = 0x10000;
+
+        ps->channels[channel].count = val;
+
+        if (channel != 0) {
+                ps->channels[channel].count_load_time = ktime_get();
+                return;
+        }
+
+        /* Two types of timer
+         * mode 1 is one shot, mode 2 is period, otherwise del timer */
+        switch (ps->channels[0].mode) {
+        case 0:
+        case 1:
+        /* FIXME: enhance mode 4 precision */
+        case 4:
+                create_pit_timer(pit, val, 0);
+                break;
+        case 2:
+        case 3:
+                create_pit_timer(pit, val, 1);
+                break;
+        default:
+                destroy_pit_timer(pit);
+        }
+}
+```
+
+
 
 ## kvm_timer_fn(): 中断流程
 
