--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -12,6 +12,7 @@
     - [2.3.2. PIC主要为8259A PIC芯片](#232-pic主要为8259a-pic芯片)
     - [2.3.3. APIC](#233-apic)
 - [3. 相关代码](#3-相关代码)
+  - [](#)
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
   - [5.1. LAPIC的创建](#51-lapic的创建)
@@ -119,6 +120,21 @@ PIC有三个重要的寄存器:
 # 3. 相关代码
 
 ![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
+
+## 
+
+```cpp
+struct kvm_pit {
+        struct kvm_io_device dev;
+        struct kvm_io_device speaker_dev;
+        struct kvm *kvm;
+        struct kvm_kpit_state pit_state;
+        int irq_source_id;
+        struct kvm_irq_mask_notifier mask_notifier;
+        struct kthread_worker *worker;
+        struct kthread_work expired;
+};
+```
 
 # 4. 整体流程
 
@@ -864,7 +880,9 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
                 goto fail_register_pit;
         /* speaker的模拟 */
         if (flags & KVM_PIT_SPEAKER_DUMMY) {
+                // 注册pit
                 kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops);
+                // PIO类型
                 ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
                                               KVM_SPEAKER_BASE_ADDRESS, 4,
                                               &pit->speaker_dev);
