--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -779,7 +779,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ pid = get_pid(task_tgid(current)); // 
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
- |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化
+ |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化, 这个高精准定时器就作为虚拟时钟的时钟源
  |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
  |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 
@@ -791,7 +791,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
  |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上, PIO类型
- |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker的初始化
+ |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker 设备的操作注册
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 
 ```
 
@@ -851,12 +851,13 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         if (IS_ERR(pit->worker))
                 goto fail_kthread;
         // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
+        // 准备workqueue ?
         kthread_init_work(&pit->expired, pit_do_work);
         // pit所属的虚拟机
         pit->kvm = kvm;
 
         pit_state = &pit->pit_state;
-        // 初始化hrtimer
+        // 初始化hrtimer, 这个高精准定时器就作为虚拟时钟的时钟源
         hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
         // hrtimer的处理函数
         pit_state->timer.function = pit_timer_fn;
