--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -786,6 +786,8 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kvm_pit_reset(pit); // 
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
+ |   |   |   |   ├─ channel != 0 ();
+ |   |   |   |   ├─ create_pit_timer();
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -981,7 +983,50 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 }
 ```
 
+```cpp
+static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
+{
+        struct kvm_kpit_state *ps = &pit->pit_state;
+        struct kvm *kvm = pit->kvm;
+        s64 interval;
 
+        if (!ioapic_in_kernel(kvm) ||
+            ps->flags & KVM_PIT_FLAGS_HPET_LEGACY)
+                return;
+
+        interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ);
+
+        pr_debug("create pit timer, interval is %llu nsec\n", interval);
+
+        /* TODO The new value only affected after the retriggered */
+        hrtimer_cancel(&ps->timer);
+        kthread_flush_work(&pit->expired);
+        ps->period = interval;
+        ps->is_periodic = is_period;
+
+        kvm_pit_reset_reinject(pit);
+
+        /*
+         * Do not allow the guest to program periodic timers with small
+         * interval, since the hrtimers are not throttled by the host
+         * scheduler.
+         */
+        if (ps->is_periodic) {
+                s64 min_period = min_timer_period_us * 1000LL;
+
+                if (ps->period < min_period) {
+                        pr_info_ratelimited(
+                            "kvm: requested %lld ns "
+                            "i8254 timer period limited to %lld ns\n",
+                            ps->period, min_period);
+                        ps->period = min_period;
+                }
+        }
+
+        hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval),
+                      HRTIMER_MODE_ABS);
+}
+```
 
 ## kvm_timer_fn(): 中断流程
 
