--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -12,7 +12,7 @@
     - [2.3.2. PIC主要为8259A PIC芯片](#232-pic主要为8259a-pic芯片)
     - [2.3.3. APIC](#233-apic)
 - [3. 相关代码](#3-相关代码)
-  - [](#)
+  - [struct kvm_pit: pit芯片](#struct-kvm_pit-pit芯片)
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
   - [5.1. LAPIC的创建](#51-lapic的创建)
@@ -47,13 +47,15 @@
 
 针对这些关键部件的虚拟化是中断虚拟化的重点。
 
+该文章以time tick的模拟为例
+
 # 2. Time Tick
 
 ## 2.1. 物理环境下的timer
 
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
-普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供产生中断源
+普通情况下，**OS Time Tick**由**PIT**(i8254)或**APIC Timer**设备提供产生中断源
 
 - PIT(i8254)定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
@@ -121,7 +123,7 @@ PIC有三个重要的寄存器:
 
 ![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
 
-## 
+## struct kvm_pit: pit芯片
 
 ```cpp
 struct kvm_pit {
@@ -786,8 +788,10 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kvm_pit_reset(pit); // 
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
- |   |   |   |   ├─ channel != 0 ();
- |   |   |   |   ├─ create_pit_timer();
+ |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 获取时间, 直接返回
+ |   |   |   |   └─ create_pit_timer();
+ |   |   |   |       ├─ interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 间隔时间
+ |   |   |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
