--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -83,6 +83,8 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 
 目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
 
+kvm支持的时钟有8254,local apic timer,kvmclock等
+
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
 ## 2.3. 相关物理芯片
