--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -4,6 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1 x86平台的常用时钟](#1-x86平台的常用时钟)
+  - [PIT可编程中断时钟](#pit可编程中断时钟)
 - [2 操作系统的时钟观](#2-操作系统的时钟观)
 
 <!-- /code_chunk_output -->
@@ -20,7 +21,15 @@
 
 由于历史原因, x86平台有多种时钟, 目前仍广泛使用的有以下几种.
 
-(1) **PIT**(Programmable Interrupt Timer或Programmable Interval Timer, **可编程中断/间隔时钟**): IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**, 软件可以通过**0x40\~0x43 I/O端口**进行操作. PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代. PIT支持周期性和单次计时两种方式.
+## PIT可编程中断时钟
+
+(1) **PIT**: Programmable Interrupt Timer或Programmable Interval Timer, **可编程中断/间隔时钟**
+
+IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号**来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
+
+PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代.
+
+PIT支持周期性和单次计时两种方式.
 
 8254 PIT有**3个计时通道**, 每个通道都有其不同的用途:
 
