--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -38,9 +38,9 @@ PIC由**2个i8259**进行“级联”，一个为master一个为slave，**每个
 
 **IRQ = 起始base号 + pin**。**接收到设备中断**后，通过**拉高引脚**通知**CPU**，CPU收到中断发送**两个INT ACK**到**INTA**，第二个INTA期间，PIC向CPU提交中断vector。
 
-8259A芯片就是常说的PIC, 它具有**IR0\~IR7**共**8个中断管脚**连接外部设备. 
+8259A芯片就是常说的PIC, 它具有`IR0~IR7`共**8个中断管脚**连接外部设备. 中断管脚具有**优先级**, 其中**IR0优先级最高**, **IR7最低**. 
 
-中断管脚具有优先级, 其中**IR0优先级最高**, **IR7最低**. PIC有三个重要的寄存器.
+PIC有三个重要的寄存器.
 
 ⓵ **IRR**(Interrupt Request Register, 中断请求控制器): 共8位, 对应**IR0\~IR7这8个中断管脚**. 某位**置1**代表**收到对应管脚的中断**但还**未提交到CPU**.
 
