--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -95,17 +95,7 @@ kvm支持的时钟有8254,local apic timer,kvmclock等
 
 ### 2.3.2. PIC主要为8259A PIC芯片
 
-**PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
-
-它具有`IR0 ~ IR7`共**8个中断管脚**连接到**外部设备**. **中断管脚**具有**优先级**, 其中IR0优先级最高, IR7最低.
-
-PIC有三个重要的寄存器:
-
-(1) IRR(Interrupt Request Register, 中断请求寄存器)共8位, 对应IR0到IR7这8个中断管脚. 某位置为1表明收到了对应管脚的中断但未提交到CPU.
-
-(2) ISR(Interrupt Service Register, 中断请求寄存器): 共8位, 某位置为1表明对应管脚的中断已经提交到CPU处理, 但CPU还未处理完.
-
-(3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
+参见`Architecture/x86/4. x86中断与异常.md`
 
 ### 2.3.3. APIC
 
