--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -4,7 +4,10 @@
 <!-- code_chunk_output -->
 
 - [1 x86平台的常用时钟](#1-x86平台的常用时钟)
-  - [PIT可编程中断时钟](#pit可编程中断时钟)
+  - [PIT: 可编程间隔时钟](#pit-可编程间隔时钟)
+  - [RTC: 实时时钟](#rtc-实时时钟)
+  - [TSC: 时间戳计数器](#tsc-时间戳计数器)
+  - [LAPIC Timer: 本地时钟中断](#lapic-timer-本地时钟中断)
 - [2 操作系统的时钟观](#2-操作系统的时钟观)
 
 <!-- /code_chunk_output -->
@@ -21,7 +24,7 @@
 
 由于历史原因, x86平台有多种时钟, 目前仍广泛使用的有以下几种.
 
-## PIT可编程中断时钟
+## PIT: 可编程间隔时钟
 
 (1) **PIT**: Programmable Interrupt Timer或Programmable Interval Timer, **可编程中断/间隔时钟**
 
@@ -29,7 +32,7 @@ IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms*
 
 PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代.
 
-PIT支持周期性和单次计时两种方式.
+PIT支持**周期性**和**单次计时**两种方式.
 
 8254 PIT有**3个计时通道**, 每个通道都有其不同的用途:
 
@@ -37,17 +40,37 @@ PIT支持周期性和单次计时两种方式.
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-(2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 其频率范围是2\~8192Hz, 通常接**IRQ8**, 软件可以通过**0x70\~0x71 I/O端口**操作. RTC支持周期性和单次计时两种方式, 此外, 它还可以配置成**每秒产生一次中断**, 具有闹钟功能. 由于具有关机继续计时的功能, RTC常被用来作为操作系统提供日期. 即"年/月/日".
+## RTC: 实时时钟
 
-(3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 其时钟频率和CPU的频率相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 由于不产生时钟中断, 故无所谓周期性和单次计时方式.
+(2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 
 
-(4) **LAPIC Timer**: 该时钟是根据LAPIC所在总线(系统总线或APIC总线)频率产生的. 为32位, 有如下两个特点.
+其频率范围是2\~8192Hz, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
 
-⓵ 由于LAPIC是每个CPU一个, 故其中断也是对于本地CPU的(Per CPU Interrupt).
+RTC支持**周期性**和**单次计时**两种方式.
 
-⓶ 可通过寄存器配置, 对总线周期进行不同的分频而产生不同频率的时钟中断.
+此外, 它还可以配置成**每秒产生一次中断！！！**, 具有**闹钟功能**. 由于具有**关机继续计时**的功能, RTC常被用来作**为操作系统提供日期**. 即"年/月/日".
 
-LAPIC Timer可配置成周期性和单次计时两种工作方式.
+## TSC: 时间戳计数器
+
+(3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 
+
+其**时钟频率**和**CPU的频率**相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 
+
+通过**rdtsc**指令, 可以读取**当前TSC的值**. 
+
+由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
+
+## LAPIC Timer: 本地时钟中断
+
+(4) **LAPIC Timer**: 该时钟是根据**LAPIC所在总线**(**系统总线**或**APIC总线**)频率产生的. 
+
+为32位, 有如下两个特点.
+
+⓵ 由于LAPIC是每个CPU一个, 故其中断也是**对于本地CPU的**(Per CPU Interrupt).
+
+⓶ 可通过**寄存器配置**, 对总线周期进行不同的分频而产生**不同频率的时钟中断！！！**.
+
+LAPIC Timer可配置成**周期性**和**单次计时**两种工作方式.
 
 (5) **HPET**(High Precision Event Timer, 高精度时间时钟): Intel和微软共同开发的新型高精度时钟, 最低频率10MHz, 可作为64位或32位时钟使用. HPET可以提供最多8个时钟, 典型实现至少有一个时钟可用. HPET时钟通过一个主计数器, 和32个比较器、匹配器一起, 又可以被配置成32个子时钟(又称channel), 每个子时钟可按不同频率产生不同的中断. 例如, 可将一个子时钟配置成每毫秒产生一个IRQ8中断, 另一个子时钟可配置成每毫秒产生一个IRQ0中断. HPET可用于代替传统PIT和RTC, 此时平台的IRQ0、IRQ8中断被HPET占用。 HPET支持周期性和单次计时两种工作方式。
 
