--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -3,32 +3,50 @@
 
 <!-- code_chunk_output -->
 
-- [1 x86平台的常用时钟](#1-x86平台的常用时钟)
-  - [PIT: 可编程间隔时钟](#pit-可编程间隔时钟)
-  - [RTC: 实时时钟](#rtc-实时时钟)
-  - [TSC: 时间戳计数器](#tsc-时间戳计数器)
-  - [LAPIC Timer: 本地时钟中断](#lapic-timer-本地时钟中断)
-- [2 操作系统的时钟观](#2-操作系统的时钟观)
+- [时钟分类](#时钟分类)
+  - [周期性时钟](#周期性时钟)
+  - [单次计时时钟](#单次计时时钟)
+- [1. 1 x86平台的常用时钟](#1-1-x86平台的常用时钟)
+  - [1.1. PIT: 可编程间隔时钟](#11-pit-可编程间隔时钟)
+  - [1.2. RTC: 实时时钟](#12-rtc-实时时钟)
+  - [1.3. TSC: 时间戳计数器](#13-tsc-时间戳计数器)
+  - [1.4. LAPIC Timer: 本地时钟中断](#14-lapic-timer-本地时钟中断)
+  - [1.5. HPET: 高精度时钟](#15-hpet-高精度时钟)
+- [2. 2 操作系统的时钟观](#2-2-操作系统的时钟观)
 
 <!-- /code_chunk_output -->
+
+# 时钟分类
 
 现代计算机中, 操作系统中很多事件都是时钟驱动的, 例如进程调度、定时器等.
 
 时钟根据**工作方式**不同, 可以分为如下两类.
 
-⓵ **周期性时钟**(Periodic Timer): 时钟以固定频率产生时钟中断. 通常, 周期性时钟会有一个计数器, 要么以固定值递减到0产生中断, 例如PIT; 要么固定增长, 当达到某个阙值时产生中断, 同时自动将阙值增加一个固定值, 计数器继续递增, 例如HPET.
+## 周期性时钟
 
-⓶ **单次计时时钟**(One\-shot Timer): 多数时钟都可以配置成这种方式, 例如PIT、HPET. 其工作方式和**到达阙值产生中断的周期性时钟**类似, 不同的是**产生中断后阙值不会自动增加**, 而是需要软件(通常是时钟中断处理函数)增加该阙值. 这提供给软件动态调整下一次时钟中断到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
+⓵ **周期性时钟**(Periodic Timer): 时钟以固定频率产生时钟中断. 
 
-# 1 x86平台的常用时钟
+通常, 周期性时钟会有**一个计数器**, 
+- 要么以**固定值递减到0**产生**中断**, 例如PIT; 
+- 要么**固定增长**, 当**达到某个阙值**时产生**中断**, 同时自动将阙值增加一个固定值, **计数器继续递增**, 例如**HPET**.
+
+## 单次计时时钟
+
+⓶ **单次计时时钟**(One\-shot Timer): 多数时钟都可以配置成这种方式, 例如PIT、HPET. 
+
+其工作方式和**到达阙值产生中断的周期性时钟**类似, 不同的是**产生中断后阙值不会自动增加**, 而是需要**软件**(通常是时钟中断处理函数)**增加该阙值**. 
+
+这提供给软件动态调整下一次时钟中断到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
+
+# 1. 1 x86平台的常用时钟
 
 由于历史原因, x86平台有多种时钟, 目前仍广泛使用的有以下几种.
 
-## PIT: 可编程间隔时钟
+## 1.1. PIT: 可编程间隔时钟
 
 (1) **PIT**: Programmable Interrupt Timer或Programmable Interval Timer, **可编程中断/间隔时钟**
 
-IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号**来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
+IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
 
 PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代.
 
@@ -40,17 +58,17 @@ PIT支持**周期性**和**单次计时**两种方式.
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-## RTC: 实时时钟
+## 1.2. RTC: 实时时钟
 
 (2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 
 
-其频率范围是2\~8192Hz, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
+其频率范围是`2~8192Hz`, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
 
 RTC支持**周期性**和**单次计时**两种方式.
 
 此外, 它还可以配置成**每秒产生一次中断！！！**, 具有**闹钟功能**. 由于具有**关机继续计时**的功能, RTC常被用来作**为操作系统提供日期**. 即"年/月/日".
 
-## TSC: 时间戳计数器
+## 1.3. TSC: 时间戳计数器
 
 (3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 
 
@@ -60,7 +78,7 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
 
-## LAPIC Timer: 本地时钟中断
+## 1.4. LAPIC Timer: 本地时钟中断
 
 (4) **LAPIC Timer**: 该时钟是根据**LAPIC所在总线**(**系统总线**或**APIC总线**)频率产生的. 
 
@@ -72,11 +90,25 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 LAPIC Timer可配置成**周期性**和**单次计时**两种工作方式.
 
-(5) **HPET**(High Precision Event Timer, 高精度时间时钟): Intel和微软共同开发的新型高精度时钟, 最低频率10MHz, 可作为64位或32位时钟使用. HPET可以提供最多8个时钟, 典型实现至少有一个时钟可用. HPET时钟通过一个主计数器, 和32个比较器、匹配器一起, 又可以被配置成32个子时钟(又称channel), 每个子时钟可按不同频率产生不同的中断. 例如, 可将一个子时钟配置成每毫秒产生一个IRQ8中断, 另一个子时钟可配置成每毫秒产生一个IRQ0中断. HPET可用于代替传统PIT和RTC, 此时平台的IRQ0、IRQ8中断被HPET占用。 HPET支持周期性和单次计时两种工作方式。
+## 1.5. HPET: 高精度时钟
 
-同时使用多个时钟带来一个明显缺点是**过多时钟中断会影响系统的性能(！！！**). 所以, 当高精度时钟可用, **OS通常会禁用低精度时钟(！！！**), 并根据需要使用**高精度时钟模拟低精度时钟**.
+(5) **HPET**(High Precision Event Timer, 高精度事件时钟): Intel和微软共同开发的新型高精度时钟, **最低频率10MHz**, 可作为64位或32位时钟使用. 
 
-# 2 操作系统的时钟观
+HPET可以提供**最多8个时钟**, 典型实现至少有一个时钟可用. 
+
+HPET时钟通过**一个主计数器**, 和**32个比较器、匹配器**一起, 又可以被配置成**32个子时钟**(又称channel), **每个子时钟**可按不同频率产生不同的中断. 
+
+例如, 可将**一个子时钟**配置成**每毫秒**产生一个**IRQ8中断**, **另一个子时钟**可配置成每毫秒产生一个**IRQ0中断**. 
+
+HPET可用于**代替传统PIT和RTC**, 此时平台的**IRQ0**、**IRQ8**中断**被HPET占用**。 
+
+HPET支持**周期性**和**单次计时**两种工作方式。
+
+同时使用多个时钟带来一个明显缺点是**过多时钟中断会影响系统的性能(！！！**). 
+
+所以, 当高精度时钟可用, **OS通常会禁用低精度时钟(！！！**), 并根据需要使用**高精度时钟模拟低精度时钟**.
+
+# 2. 2 操作系统的时钟观
 
 从操作系统角度看, 时钟作用可以分为如下两类.
 
