--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -3,26 +3,28 @@
 
 <!-- code_chunk_output -->
 
-- [时钟分类](#时钟分类)
-  - [周期性时钟](#周期性时钟)
-  - [单次计时时钟](#单次计时时钟)
-- [1. 1 x86平台的常用时钟](#1-1-x86平台的常用时钟)
-  - [1.1. PIT: 可编程间隔时钟](#11-pit-可编程间隔时钟)
-  - [1.2. RTC: 实时时钟](#12-rtc-实时时钟)
-  - [1.3. TSC: 时间戳计数器](#13-tsc-时间戳计数器)
-  - [1.4. LAPIC Timer: 本地时钟中断](#14-lapic-timer-本地时钟中断)
-  - [1.5. HPET: 高精度时钟](#15-hpet-高精度时钟)
-- [2. 2 操作系统的时钟观](#2-2-操作系统的时钟观)
+- [1. 时钟分类](#1-时钟分类)
+  - [1.1. 周期性时钟](#11-周期性时钟)
+  - [1.2. 单次计时时钟](#12-单次计时时钟)
+- [2. x86平台的常用时钟](#2-x86平台的常用时钟)
+  - [2.1. PIT: 可编程间隔时钟](#21-pit-可编程间隔时钟)
+  - [2.2. RTC: 实时时钟](#22-rtc-实时时钟)
+  - [2.3. TSC: 时间戳计数器](#23-tsc-时间戳计数器)
+  - [2.4. LAPIC Timer: 本地时钟中断](#24-lapic-timer-本地时钟中断)
+  - [2.5. HPET: 高精度时钟](#25-hpet-高精度时钟)
+- [3. 操作系统的时钟观](#3-操作系统的时钟观)
+  - [统计值和驱动事件](#统计值和驱动事件)
+  - [定时器](#定时器)
 
 <!-- /code_chunk_output -->
 
-# 时钟分类
+# 1. 时钟分类
 
 现代计算机中, 操作系统中很多事件都是时钟驱动的, 例如进程调度、定时器等.
 
 时钟根据**工作方式**不同, 可以分为如下两类.
 
-## 周期性时钟
+## 1.1. 周期性时钟
 
 ⓵ **周期性时钟**(Periodic Timer): 时钟以固定频率产生时钟中断. 
 
@@ -30,19 +32,19 @@
 - 要么以**固定值递减到0**产生**中断**, 例如PIT; 
 - 要么**固定增长**, 当**达到某个阙值**时产生**中断**, 同时自动将阙值增加一个固定值, **计数器继续递增**, 例如**HPET**.
 
-## 单次计时时钟
+## 1.2. 单次计时时钟
 
 ⓶ **单次计时时钟**(One\-shot Timer): 多数时钟都可以配置成这种方式, 例如PIT、HPET. 
 
 其工作方式和**到达阙值产生中断的周期性时钟**类似, 不同的是**产生中断后阙值不会自动增加**, 而是需要**软件**(通常是时钟中断处理函数)**增加该阙值**. 
 
-这提供给软件动态调整下一次时钟中断到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
+这提供给软件**动态调整下一次时钟中断**到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
 
-# 1. 1 x86平台的常用时钟
+# 2. x86平台的常用时钟
 
 由于历史原因, x86平台有多种时钟, 目前仍广泛使用的有以下几种.
 
-## 1.1. PIT: 可编程间隔时钟
+## 2.1. PIT: 可编程间隔时钟
 
 (1) **PIT**: Programmable Interrupt Timer或Programmable Interval Timer, **可编程中断/间隔时钟**
 
@@ -58,7 +60,7 @@ PIT支持**周期性**和**单次计时**两种方式.
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-## 1.2. RTC: 实时时钟
+## 2.2. RTC: 实时时钟
 
 (2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 
 
@@ -68,7 +70,7 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 此外, 它还可以配置成**每秒产生一次中断！！！**, 具有**闹钟功能**. 由于具有**关机继续计时**的功能, RTC常被用来作**为操作系统提供日期**. 即"年/月/日".
 
-## 1.3. TSC: 时间戳计数器
+## 2.3. TSC: 时间戳计数器
 
 (3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 
 
@@ -78,7 +80,7 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
 
-## 1.4. LAPIC Timer: 本地时钟中断
+## 2.4. LAPIC Timer: 本地时钟中断
 
 (4) **LAPIC Timer**: 该时钟是根据**LAPIC所在总线**(**系统总线**或**APIC总线**)频率产生的. 
 
@@ -90,7 +92,7 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 LAPIC Timer可配置成**周期性**和**单次计时**两种工作方式.
 
-## 1.5. HPET: 高精度时钟
+## 2.5. HPET: 高精度时钟
 
 (5) **HPET**(High Precision Event Timer, 高精度事件时钟): Intel和微软共同开发的新型高精度时钟, **最低频率10MHz**, 可作为64位或32位时钟使用. 
 
@@ -108,14 +110,18 @@ HPET支持**周期性**和**单次计时**两种工作方式。
 
 所以, 当高精度时钟可用, **OS通常会禁用低精度时钟(！！！**), 并根据需要使用**高精度时钟模拟低精度时钟**.
 
-# 2. 2 操作系统的时钟观
+# 3. 操作系统的时钟观
 
 从操作系统角度看, 时钟作用可以分为如下两类.
+
+## 统计值和驱动事件
 
 ⓵ 提供**统计值**及**驱动事件**: 
 
 - 提供**统计值**是指操作系统用时钟来**维护一些必需的数据**, 例如一个**进程**在**用户态/内核态的时间**, 系统的日期、时间等. 
 - **驱动事件**是指**驱动以时间为资源的程序！！！**, 典型就是进程. 例如, 分时操作系统为**每个进程分配固定的时间片**, 调度时间片耗尽的进程睡眠, 唤醒分配到新时间片的进程运行.
+
+## 定时器
 
 ⓶ **维护定时器(Timer**): 定时器是程序中常用的组件, 用于在某个指定时间到达后执行特定的操作. 定时器大量运用于操作系统中, 例如内核为I/O操作注册的超时定时器、操作系统提供给应用程序使用的定时器接口等. 见图2\-19.
 
