--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -76,7 +76,7 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 其**时钟频率**和**CPU的频率**相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 
 
-通过**rdtsc**指令, 可以读取**当前TSC的值**. 
+它是CPU内部的一个寄存器，根据CPU的周期进行递增. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 通过它也可以校准RTC。
 
 由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
 
